Fix mobile alignment for github icon

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -609,6 +609,10 @@ video {
   margin-top: 1.25rem;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .\!block {
   display: block !important;
 }
